Set up basic db connection and User's table.

--- a/src/star/development.ini
+++ b/src/star/development.ini
@@ -24,7 +24,7 @@ SESSION_COOKIE_NAME = star
 SECRET_KEY = changethislater
 
 # SQLAlchemy database URL
-SQLALCHEMY_DATABASE_URI = postgres://postgres:@localhost:7878/star
+SQLALCHEMY_DATABASE_URI = postgresql+psycopg2://star_admin:star_admin@localhost:5432/stardb
 
 # Logging configuration
 [loggers]
