Support basic Work creation through admin dashboard.

--- a/src/star/development.ini
+++ b/src/star/development.ini
@@ -18,6 +18,7 @@ threadpool_max_requests = 0
 [app:main]
 use = egg:star
 #filter-with = translogger
+UPLOAD_FOLDER = ./uploads/
 
 # Flask general
 SESSION_COOKIE_NAME = star
